# sim

./: Cargo.toml  README.md  README.zh.md  Trunk.toml  index.html  index.scss
.claude/: settings.local.json
.github/workflows/: deploy.yml
src/: camera.rs  car_dynamics.rs  init.rs  input.rs  main.rs  panel.rs  sound.rs  utils.rs
